# mindvideo

./: .env.example  .gitignore  Dockerfile  LICENSE  PROJECT_STRUCTURE.md  README.md  README_V1.0.md  docker-compose.yml  generate_anchoring.py  generate_anchoring_fixed.py  requirements.txt  run_backend.py  start_recorder.bat  train_voice.py  v1.0_generate_video.py  vocu_apifox.html  vocu_dev_page.html  vocu_docs_page.html  vocu_quickstart.html
backend/: config.py  database.py  main.py  models.py  pyproject.toml  test_api.py
backend/engines/: ken_burns.py  subtitle_renderer.py
backend/integrations/: deepseek_client.py  indextts_client.py  sdxl_client.py  sdxl_online_client.py  sovits_client.py  vocu_client.py
backend/repositories/: project_repo.py  task_repo.py
backend/services/: audio_synthesis.py  prompt_engine.py  script_analysis.py  video_composition.py  video_generation.py  video_matching.py  visual_generation.py
packaging/: PACKAGING_GUIDE.md  pyinstaller_build.py  start_services.bat  stop_services.bat
